multi domain support (#15)

--- a/.env.dev
+++ b/.env.dev
@@ -2,8 +2,7 @@ APP_NAME=Ventura
 APP_ENV=local
 APP_KEY=base64:Oj//brD5sP9CuEHnT61cUmyD2pCmxjyZlUX6aUSsIfY=
 APP_DEBUG=true
-APP_URL=http://localhost
-APP_BASE_DOMAIN=staging.ventura.pro
+APP_URL=/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
